[package]
name = "mandelbrot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
env_logger = "0.9"
image = "0.13.0"
json_env_logger = { version = "0.1.1", features = ["iso-timestamps"] }
log = { version = "0.4", features = ["kv_unstable_std"] }
num = "0.4"
structopt = "0.3"